# exfilguard

./: .dockerignore  .gitignore  404.html  AGENTS.md  Cargo.toml  README.md  ROADMAP.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: ci.yml  release.yml
apt/: InRelease  Packages  Release  Release.gpg  exfilguard.gpg  exfilguard_0.1.5-1_amd64.deb  exfilguard_0.2.3-1_amd64.deb  exfilguard_0.2.3-1_arm64.deb  exfilguard_0.3.1-1_amd64.deb  exfilguard_0.3.1-1_arm64.deb  exfilguard_0.3.2-1_amd64.deb  exfilguard_0.3.2-1_arm64.deb  exfilguard_0.6.0-1_amd64.deb  exfilguard_0.6.0-1_arm64.deb
configuration/: index.html
design-decisions/: index.html
docs/: configuration.md  design-decisions.md  http-framing.md  index.md  policies.md
examples/: README.md
examples/full/: clients.toml  exfilguard.toml  policies.toml
examples/quickstart/: clients.toml  exfilguard.toml  policies.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: connect_target.rs  http1_chunked_body.rs  http1_request_head.rs  http1_response_head.rs  http2_request_sanitize.rs  proxy_protocol.rs
hooks/: pre-commit
http-framing/: index.html
packaging/deb-container/: Dockerfile  README.md  compose.yaml
packaging/deb/config/: clients.toml  exfilguard.toml  policies.toml
packaging/deb/scripts/: postinst  postrm  prerm
packaging/deb/systemd/: exfilguard.service
perf/: Dockerfile.exfilguard  README.md  compose.yaml  run.sh
perf/config/clients.d/: perf.toml
perf/config/policies.d/: perf.toml
perf/scripts/: http-load.js
policies/: index.html
search/: search_index.json
src/: cli.rs  io_util.rs  lib.rs  logging.rs  main.rs  metrics.rs  settings.rs  util.rs
src/config/: loader.rs  mod.rs  model.rs
src/policy/: compile.rs  matcher.rs  mod.rs  model.rs
src/proxy/: allow_log.rs  cache.rs  forward_error.rs  forward_limits.rs  headers.rs  listener.rs  mod.rs  policy_eval.rs  policy_response.rs  request.rs  request_pipeline.rs  resolver.rs  upstream.rs
src/proxy/cache/: admission.rs  entry.rs  index.rs  key.rs  lookup.rs  maintenance.rs  mod.rs  reader.rs  request.rs  store.rs  writer.rs
src/proxy/connect/: bump.rs  handler.rs  mod.rs  resolve.rs  session.rs  splice.rs  target.rs
src/proxy/http/: body.rs  cache_control.rs  cache_decision.rs  codec.rs  dispatch.rs  forward.rs  mod.rs  pipeline.rs  server.rs  upstream.rs
src/proxy/http/codec/: headers.rs  line.rs  mod.rs  request.rs  response.rs
src/proxy/http/forward/: cache.rs  connection.rs  mod.rs  request.rs  response.rs
src/proxy/http/pipeline/: cache.rs  forward.rs  handler.rs  mod.rs  parse.rs  respond.rs
src/proxy/http2/: forward.rs  mod.rs  request.rs  server.rs  upstream.rs
src/tls/: ca.rs  cache.rs  issuer.rs  mod.rs
tests/: bump_integration.rs  cache_integration.rs  limits_integration.rs  proxy_protocol_integration.rs  reload_integration.rs
tests/data/clients/: ipv6.toml
tests/data/policies/: ipv6.toml
tests/support/: bump_fixture.rs  config.rs  dirs.rs  harness.rs  http_utils.rs  logging.rs  mod.rs  net.rs  proxy_client.rs  tls.rs  upstream.rs
