[package]
name = "exfilguard"
version = "0.1.6"
edition = "2024"
description = "Rust egress proxy that enforces outbound network policies with TLS interception support."
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
bytes = "1.10"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3.31"
h2 = "0.4.12"
http = "1.3"
hyper = { version = "1.7", features = ["client", "http1", "http2", "server"] }
lru = "0.16"
once_cell = "1.21"
parking_lot = "0.12"
prometheus = "0.13"
rcgen = "0.14"
regex = "1.12"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.2"
rustls-native-certs = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "signal", "time", "fs", "net", "io-util"] }
tokio-rustls = "0.26"
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
ipnet = "2.11"
time = { version = "0.3", features = ["std"] }
zeroize = "1.7"
blake3 = "1.5"
rand = "0.8"
config = { version = "0.14", features = ["toml"] }
async-trait = "0.1"
httpdate = "1.0.3"
uuid = { version = "1.18.1", features = ["v4"] }

[features]
fuzzing = []

[dev-dependencies]
assert_matches = "1.5"
tokio = { version = "1.48", features = ["rt", "macros", "test-util"] }
tempfile = "3.23"

[package.metadata.deb]
maintainer = "Ville Laurikari <ville@laurikari.net>"
copyright = "2025 Ville Laurikari"
extended-description = "ExfilGuard is a Rust egress proxy that enforces outbound policies with TLS interception support."
depends = "adduser, ca-certificates, systemd"
section = "net"
priority = "optional"
conf-files = [
    "/etc/exfilguard/exfilguard.toml",
    "/etc/exfilguard/clients.toml",
    "/etc/exfilguard/policies.toml",
]
maintainer-scripts = "packaging/deb/scripts"

[[package.metadata.deb.assets]]
source = "target/release/exfilguard"
dest = "usr/sbin/exfilguard"
mode = "0755"

[[package.metadata.deb.assets]]
source = "packaging/deb/systemd/exfilguard.service"
dest = "lib/systemd/system/exfilguard.service"
mode = "0644"

[[package.metadata.deb.assets]]
source = "packaging/deb/config/exfilguard.toml"
dest = "etc/exfilguard/exfilguard.toml"
mode = "0640"

[[package.metadata.deb.assets]]
source = "packaging/deb/config/clients.toml"
dest = "etc/exfilguard/clients.toml"
mode = "0640"

[[package.metadata.deb.assets]]
source = "packaging/deb/config/policies.toml"
dest = "etc/exfilguard/policies.toml"
mode = "0640"
